# payuur

./: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  HACKATHON_SUBMISSION.md  MAGICBLOCK_INTEGRATION.md  MAGICBLOCK_VERIFICATION.md  README.md  magicblock.json  package-lock.json  package.json
frontend/: .firebaserc  firebase.json  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CypherpunkSecurity.tsx  FastDashboard.tsx  FastProfile.tsx  FastTickets.tsx  MagicBlockRealtimeDemo.tsx  QuickDashboard.tsx  RealTimeEventDashboard.tsx  WalletBar.tsx
frontend/src/config/: soluma.ts
frontend/src/idl/: soluma.json
frontend/src/layout/: MainLayout.tsx  Navbar.tsx
frontend/src/lib/: magicblock-sdk.ts  magicblock.ts  realtime.ts  solana-realtime.ts
frontend/src/pages/: CreateEvent.tsx  EventCheckout.tsx  Home.tsx  WalletDemo.tsx
frontend/src/pages/organizerDashboard/: section.tsx
frontend/src/pages/organizerDashboard/Sections/: MyTickets.tsx  attendee-management.tsx  create-event.tsx  dashboard-overview.tsx  my-events.tsx  organizer-sidebar.tsx  profile.tsx
frontend/src/ui/: badge.tsx  button.tsx  card.tsx
programs/soluma/: Cargo.toml
programs/soluma-magicblock/: Cargo.toml
programs/soluma-magicblock/src/: lib.rs
programs/soluma/src/: lib.rs
scripts/: demo.js  deploy-magicblock.bat  deploy-magicblock.sh  install-dependencies.bat  install-dependencies.sh  magicblock-fix.ps1  start-demo.bat
soluma/: Anchor.toml
tests/: soluma.ts
