[package]
name = "soluma-magicblock"
version = "0.1.0"
description = "Soluma Event Platform with MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soluma_magicblock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
magicblock-ephemeral-rollups = "0.1.0"